force-app/main/default/objects/GBase_Meeting_Event__e/GBase_Meeting_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event for GBase Meeting processing status updates</description>
    <label>GBase Meeting Event</label>
    <pluralLabel>GBase Meeting Events</pluralLabel>
</CustomObject>