force-app/main/default/objects/GBase_Meeting_Event__e/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>