force-app/main/default/objects/GBase_Meeting_Event__e/fields/Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Id__c</fullName>
    <label>Meeting ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>