force-app/main/default/objects/GBase_Meeting_Event__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>